# bresenham-lighting-engine

./: .cursorignore  .gitignore  CHANGE_LOG.md  CONTEXT.md  Cargo.toml  Dockerfile  README.md  VISUAL_TESTING.md  arctan.c3  block_map.c3  constants.c3  index.html  lighting.c3  lighting.wasm  package-lock.json  package.json  project.json  ray.c3  script.mjs
.cargo/: config.toml
.github/workflows/: deploy-demo.yml  npm-publish.yml
benches/: collision_performance.rs
docs/decisions/: 0001-bresenham-based-lighting-engine.md  0002-use-rust-for-core-engine.md  0003-avoid-async-for-simplicity.md  0004-rust-native-collision-detection.md  0005-hybrid-room-pixel-collision.md  0006-unify-collision-detection.md  0007-extract-lighting-engine-type.md  0008-per-engine-all-rays-and-runtime-resolution.md
examples/: cold_start_bench.rs  scenario.rs
examples/web-demo/: README.md  build.sh  index.html  index.js  package.json  script.mjs  server.js  styles.css  test-wasm.js  test.html  watch.js
examples/web-demo/src/: main.js  test-main.js
examples/web-demo/src/components/: App.js  CanvasContainer.js  ControlPanel.js  ErrorScreen.js  Footer.js  Instructions.js  LightingDemo.js  LoadingScreen.js  PerformanceMetrics.js  TestApp.js  TestStep.js
examples/web-demo/src/hooks/: useLighting.js  useTests.js  useWasm.js
src/: arctan.rs  block_map.rs  collision.rs  constants.rs  engine.rs  lib.rs  lighting.rs  map_grid.rs  ray.rs
src/scenarios/: mod.rs
tests/: README.md  map_grid.rs  output_mechanisms.rs  scenarios.rs
