[package]
name = "bresenham-lighting-engine"
version = "0.2.3"
edition = "2021"
description = "A CPU-based 2D lighting engine using Bresenham's line algorithm with fast native collision detection"
license = "ISC"
authors = ["Tim <tim@example.com>"]
keywords = ["lighting", "game-engine", "webassembly", "bresenham", "2d"]
categories = ["game-engines", "graphics", "wasm"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
num-traits = "0.2"
once_cell = "1.19.0"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
image = "0.24"
imageproc = "0.23"
